--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
     <body>
         <h1>Hello World</h1>
-        <p>This is the GitHub pages for mensisa</p>
+        <p>This is the GitHub pages</p>
     </body>
 </html>
